--- a/index.html
+++ b/index.html
@@ -10,8 +10,28 @@
 
 <body>
     <div class="grid-container">
-        <div class="grid-item grid-item-1"></div>
-        <div class="grid-item grid-item-2"></div>
+        <div class="grid-item grid-item-1">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque et suscipit
+            voluptatibus ullam quaerat repellendus hic accusantium earum dolorem sequi, iure veritatis explicabo.
+            Voluptas, beatae.</div>
+        <div class="grid-item grid-item-2">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quis maxime
+            necessitatibus distinctio laboriosam, quaerat neque asperiores velit nostrum, nisi quam eligendi! Amet animi
+            asperiores eveniet, atque exercitationem iste perspiciatis mollitia dolorum corrupti neque iure ratione a
+            fugit debitis veritatis, error quas non quam eius rerum numquam soluta deserunt. Pariatur repellat
+            perspiciatis possimus quibusdam quae, voluptas ipsam assumenda adipisci iusto quia impedit praesentium rem
+            placeat nesciunt, eveniet sequi est, magni asperiores! Aut repellat maxime quos quas mollitia harum
+            molestias alias labore nostrum nobis, enim odio reiciendis saepe sint illum quisquam ipsum itaque sit esse
+            accusantium ducimus sequi dolores. Eum, error amet ea incidunt molestiae iste aspernatur labore rem repellat
+            quo autem nulla? Placeat non libero, autem quasi voluptatem eaque cum blanditiis recusandae incidunt sit
+            deserunt temporibus dolore corrupti officiis ea, veniam, voluptate eum impedit. Veritatis neque id mollitia
+            dolorum labore sed. Rem soluta sit, recusandae at nisi, voluptatibus excepturi delectus adipisci ut
+            blanditiis ipsam a ea illum perspiciatis corporis quas quod hic commodi qui modi veritatis! Dolores
+            explicabo perferendis inventore error adipisci ducimus ipsum tenetur impedit, vitae cupiditate odit maxime
+            suscipit, fugiat autem. Dolorum et quos magnam alias cum tenetur voluptas iusto suscipit ipsum cupiditate
+            excepturi, nesciunt sit corporis. Iste, alias? Voluptatibus accusantium inventore, magni et dolor quis ad
+            voluptatem repellendus quibusdam aliquam dicta doloribus, perferendis recusandae architecto hic? Possimus
+            atque rerum reiciendis dicta impedit, consectetur, accusantium sapiente ullam autem porro natus velit, culpa
+            incidunt. Pariatur harum dignissimos unde recusandae asperiores, quas dolor iste praesentium quam incidunt
+            veniam molestiae quod nisi.</div>
         <div class="grid-item grid-item-3"></div>
         <div class="grid-item grid-item-4"></div>
     </div>
